--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
+    "semantic-ui-react": "^2.0.4",
     "v5": "^0.1.2",
     "web-vitals": "^1.1.2"
   },
